Fix MySQL connection on circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,8 @@ jobs:
          environment:
             MYSQL_ALLOW_EMPTY_PASSWORD: yes
             MYSQL_DATABASE: sample
+            MYSQL_HOST: "127.0.0.1"
+            MYSQL_ROOT_HOST: "%"
             MYSQL_USER: root
 
     working_directory: ~/repo
@@ -35,6 +37,16 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+
+      - run:
+          name: install dockerize
+          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.3.0
+
+      - run:
+          name: Wait for db
+          command: dockerize -wait tcp://localhost:3306 -timeout 1m
 
       # Database setup
       - run: bundle exec rake circleci:db:create
